# aoc2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  docker_env.sh
docker/: Dockerfile
